# awesome-cpp-modules

./: .gitignore  CMakeLists.txt  LICENSE  README.md  foo.cc  main.cc  speech.cpp
fragments/: speech.cc  speech_slovenian.cc  speech_spanish.cc
